Update activities Nov27

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,11 +7,12 @@
   title={CookAR: Affordance Augmentations in Wearable AR to Support Kitchen Tool Interactions for People with Low Vision},
   author={Lee, Jaewook and Tjahjadi, Andrew D and Kim, Jiho and Yu, Junpu and Park, Minji and Zhang, Jiawen and Froehlich, Jon E. and Tian, Yapeng and Zhao, Yuhang},
   booktitle={UIST 2024},
-  book_abbr={UIST 2024, to appear},
+  book_abbr={UIST 2024},
+  award={Belonging and Inclusion Best Paper Award},
   publisher={ACM},
   preview={cookar.png},
   abstract={Cooking is a central activity of daily living, supporting independence as well as mental and physical health. However, prior work has highlighted key barriers for people with low vision (LV) to cook, particularly around safely interacting with tools, such as sharp knives or hot pans. Drawing on recent advancements in computer vision (CV), we present <i>CookAR</i>, a head-mounted AR system with real-time object affordance augmentations to support safe and efficient interactions with kitchen tools. To design and implement CookAR, we collected and annotated the first egocentric dataset of kitchen tool affordances, fine-tuned an affordance segmentation model, and developed an AR system with a stereo camera to generate visual augmentations. To validate CookAR, we conducted a technical evaluation of our fine-tuned model as well as a qualitative lab study with 10 LV participants for suitable augmentation design. Our technical evaluation demonstrates that our model outperforms the baseline on our tool affordance dataset, while our user study indicates a preference for affordance augmentations over the traditional whole object augmentations.},
-  pdf={https://arxiv.org/abs/2407.13515},
+  pdf={https://dl.acm.org/doi/10.1145/3654777.3676449},
   code={https://github.com/makeabilitylab/CookAR?tab=readme-ov-file}
 }
 
@@ -19,11 +20,11 @@
   title={AI-Vision: A Three-Layer Accessible Image Exploration System For People with Visual Impairments in China},
   author={Zhao, Kaixing and Lai, Rui and Guo, Bin and Liu, Le and He, Liang and Zhao, Yuhang},
   booktitle={IMWUT 2024},
-  book_abbr={IMWUT 2024, to appear},
+  book_abbr={IMWUT 2024},
   publisher={ACM},
   preview={AIVision.png},
   abstract={Accessible image exploration systems are able to help people with visual impairments (PVI) to understand image content by providing different types of interactions. With the development of computer vision technologies, image exploration systems are supporting more fine-grained image content processing, including image segmentation, description and object recognition. However, in developing countries like China, it is still rare for PVI to widely rely on such accessible system. To better understand the usage situation of accessible image exploration system in China and improve the image understanding of PVI in China, we developed AI-Vision, an Android based hierarchical accessible image exploration system supporting the generations of image general description, local object description and metadata information. Our 7-day diary study with 10 PVI verified the usability of AI-Vision and also revealed a series of design implications for improving accessible image exploration systems similar to AI-Vision.},
-  pdf={}
+  pdf={https://dl.acm.org/doi/abs/10.1145/3678537}
 }
 
 @inproceedings{hu2024really,
